# code.py

./: pyproject.toml
1_commandbase_pyfundamentals/notebooks/: variables.ipynb  variables.md
